--- a/pages/generative-and-rag/rag-with-generative-search.mdx
+++ b/pages/generative-and-rag/rag-with-generative-search.mdx
@@ -168,7 +168,7 @@ When you need to generate a result for each object based on a single prompt, use
 </Collapse>
 
 ## Generate from every single document with options
-You might want to adjust the maxTokens, creativity level, or use a specific model for your generated content. Use generation [options](/content-api/generative#arguments) to fine-tune these parameters. See all available options in our [Generative Search Guide](/content-api/generative#options).
+You might want to adjust the maxTokens, creativity level, or use a specific model for your generated content. Use generative search [options](/content-api/generative#arguments) to fine-tune these parameters. 
 
 <Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
@@ -302,7 +302,7 @@ You might want to adjust the maxTokens, creativity level, or use a specific mode
 
 
 ## Generate from multiple documents
-When you need to generate from multiple documents together and get a grouped result, use the `.generate.fromMany()` method. This lets you combine specific fields from all your sources to create a single comprehensive output.
+When you need to generate from multiple documents together and get a grouped result, use the `.generate.fromMany()` method. This lets you combine specific fields from all your sources to create a single generative result.
 
 <Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
@@ -419,7 +419,7 @@ When you need to generate from multiple documents together and get a grouped res
 </Collapse>
 
 ## Generate from multiple documents with options
-Sometimes you want more control over your multi-document generation. Using fromMany with [options](/content-api/generative#arguments) lets you better control the resulting content while working with multiple sources. 
+Sometimes you want more control over your multi-document generation. Using fromMany with [options](/content-api/generative#arguments) lets you better control the output. 
 
 <Tabs items={['SDK (.ts)', 'GraphQL']}>
  <Tabs.Tab>
