--- a/pages/prompting/use-the-image-inside-a-prompt.mdx
+++ b/pages/prompting/use-the-image-inside-a-prompt.mdx
@@ -6,7 +6,8 @@ import { Tabs } from "nextra/components"
 Generate content by providing images as input through messages. The system can analyze and describe images using advanced AI models.
 
 ## Basic Image Generation
-Use images as input to generate descriptions or analyze visual content by providing image URLs.
+When you need to analyze or generate from images, use message arrays with image inputs. 
+
 
 ```typescript copy
     const {
