--- a/pages/search/similarity-search.mdx
+++ b/pages/search/similarity-search.mdx
@@ -304,3 +304,49 @@ When you have a document you like and want to find similar ones, use `.similar.r
  </Tabs.Tab>
 </Tabs>
 
+<Collapse title="Response">
+```typescript copy
+
+[
+    {
+        "_additional": {
+            "certainty": 1.0000006556510925,
+            "distance": -0.0000013113022
+        },
+        "authors": [
+            {
+                "name": "Amir Houieh",
+                "link": "https://www.linkedin.com/in/amirhouieh/",
+                "image": "amir.png"
+            }
+        ],
+        "autoSummary": "Unbody democratizes AI app development by simplifying data personalization and integration for non-AI developers. Featuring a modular AI pipeline with four layers, it aggregates, processes, and delivers data for building interactive, AI-driven applications.",
+        "originalName": "unbody-intro.md",
+        "title": "Unbody: all AI buzz in one endpoint, one line of code"
+    },
+    {
+        "_additional": {
+            "certainty": 0.803291380405426,
+            "distance": 0.39341724
+        },
+        "authors": [],
+        "autoSummary": "The official Unbody client for TypeScript/JavaScript allows flexible data retrieval and transformations. Install using `npm i @unbody-io/ts-client`. Instantiate with `Unbody` by setting API and project keys. Use methods like `.get`, `.ask`, `.nearText`, and `.group` to query data. Configure queries with parameters for filtering, pagination, and sorting.",
+        "originalName": "typescript-client.md",
+        "title": "Installation"
+    },
+    {
+        "_additional": {
+            "certainty": 0.7571523785591125,
+            "distance": 0.48569524
+        },
+        "authors": "IJITEE;Scopus Journal;UGC Journal",
+        "autoSummary": "Artificial Intelligence empowers engineering by facilitating analyses through machine learning and deep learning. This paper explores their applications, benefits, and challenges across sectors, highlighting deep learning's prowess with extensive data via layered architectures compared to shallow learning.",
+        "originalName": "Machine-Learning-and-Deep-Learning.pdf",
+        "title": "International Journal of Innovative Technology and Exploring Engineering (IJITEE)"
+    }
+]
+
+```
+</Collapse>
+
+
