--- a/pages/prompting/use-vars-inside-a-prompt.mdx
+++ b/pages/prompting/use-vars-inside-a-prompt.mdx
@@ -5,10 +5,11 @@ import { Tabs } from "nextra/components"
 
 Transform and inject dynamic data into your prompts using variables. Variables allow you to process query results before using them in message content.
 
-## Basic Variable Generation
+## Generate from video subtitles using vars
+{/* TODO: need to change this text later */}
 Demonstrates using variables to process video subtitles. The code uses two [JQ-formatted](https://jqlang.github.io/jq/) vars:
-- 'subtitles': Extracts video subtitle entries
-- 'context': Creates a structure combining filename and transcription
+- `subtitles`: Extracts video subtitle entries
+- `context`: Creates a structure combining filename and transcription
 
 The processed data is then injected into a message prompt using `context` syntax, generating a summary of the video transcription. Results include generation metadata and usage statistics.
 
