--- a/pages/data-ingestion/push-api.mdx
+++ b/pages/data-ingestion/push-api.mdx
@@ -221,7 +221,7 @@ await pushApi.records.list({
 - Data within a **source** is isolated, meaning **cross-references** cannot be created between records or files that belong to different sources. All operations are limited to the current source.
 
 <Callout type="info">
-Initialize your Push API source using it. Learn more [Admin API source documentation](/admin-api#project-sources).
+Initialize your Push API source before using it. Learn more [Admin API source documentation](/admin-api#project-sources).
 </Callout>
 
 ## Endpoints
