--- a/pages/project-configurations/overview.mdx
+++ b/pages/project-configurations/overview.mdx
@@ -6,16 +6,6 @@ import { Cards } from 'nextra/components'
 
 When creating a new project, you'll configure essential settings that define how your project processes and handles data. These configurations include:
 
-- Vectorization models for text and images
-- Enhancement pipelines for data processing
-- Generative models for AI operations
-- Custom schemas and data structures
-
-Most of these settings become permanent after project creation to ensure consistency and stability in your data processing pipeline.
-
-## Immutable vs Configurable Settings
-
-Once a project is created, most configuration settings are **immutable** and cannot be changed. The only configurable setting after project creation is the **Generator Module Models**.
 
 <Cards className="grid grid-cols-2 gap-4">
    <Cards.Card title={"Vectorizers"}
@@ -29,7 +19,7 @@ Once a project is created, most configuration settings are **immutable** and can
                href={"/project-configurations/enhancers"}
                arrow={true}>
        <div className={"mx-4 text-sm [&>*]:leading-5 leading-1 opacity-75"}>
-           Set up pipelines for data processing and enrichment
+           Set up enhancement pipelines for data processing and enrichment
        </div>
    </Cards.Card>
    <Cards.Card title={"Generative Modules"}
@@ -54,3 +44,10 @@ Once a project is created, most configuration settings are **immutable** and can
        </div>
    </Cards.Card> */}
 </Cards>
+
+Most of these settings become permanent after project creation to ensure consistency and stability in your data processing pipeline.
+
+{/* TODO: I can't re configure any settings after creating a projects */}
+## Immutable vs Configurable Settings
+
+Once a project is created, most configuration settings are **immutable** and cannot be changed. The only configurable setting after project creation is the **Generator Module Models**.
