fix: minor issues

--- a/pages/admin-api.mdx
+++ b/pages/admin-api.mdx
@@ -1,4 +1,4 @@
-# UnbodyAdmin API Overview
+# Admin API Overview
 
 `UnbodyAdmin` is a TypeScript/JavaScript client for interacting with Unbody's Admin API. It provides a convenient and unified interface to manage projects, sources, webhooks, keys, and more within your Unbody environment.
 
