--- a/pages/content-api/generative.mdx
+++ b/pages/content-api/generative.mdx
@@ -126,7 +126,7 @@ This method generates a result by applying a single prompt to a group of objects
 ### Arguments
 | Name               | Type     | Default | Description                                                                                                                                                     |
 | --- | --- | --- | --- |
-| `model`            | `string` | | Defaults to the model configured during project setup. This option is only available on paid subscription plans. See the [supported models.](../project-configurations/generative-modules#supported-models) |
+| `model`            | `string` | | Defaults to the model configured during project setup. This option is only available on [paid subscription plans](https://unbody.io/pricing). |
 | `maxTokens`        | `number` | | Maximum number of tokens in the output (usually constrained by the model).                                                                                      |
 | `temperature`      | `number` | | Adjusts creativity in output (0 to 1). Higher values make output more random.                                                                                   |
 | `presencePenalty`  | `number` | | Penalizes new tokens based on their presence in the input (range: -2.0 to 2.0).                                                                                 |
