--- a/pages/why.mdx
+++ b/pages/why.mdx
@@ -35,5 +35,5 @@ This reimagined stack enables developers to create products that were previously
 
 Now that you understand why Unbody exists, it’s time to see how it works.
 
-[Get Started](/get-started)
+[Get Started](/first-project)
 
