--- a/pages/content-api/filters.mdx
+++ b/pages/content-api/filters.mdx
@@ -69,7 +69,7 @@ where: {
 - `operator`: The operator that will be used to compare the field's value against the provided value.
 - `value`: The value that will be compared against the field's value.
 
-## GraphQL Filter Operators
+## Filter Operators
 
 Let us take a look at some of the common operators you can use with GraphQL queries.
 
