--- a/pages/content-api/overview.mdx
+++ b/pages/content-api/overview.mdx
@@ -9,7 +9,7 @@ The **Content API** lets you interact with enriched, AI-ready data in Unbody. Bu
 - Perform traditional database operations: [filter](/content-api/filters), sort, group, and limit results.
 - Run [semantic searches](/content-api/search/semantic-search) using vector similarity and contextual queries.
 - Execute [generative](/content-api/generative) tasks such as metadata creation, text synthesis, and data augmentation.
-- Work seamlessly through GraphQL or a JavaScript SDK.
+- Work seamlessly through GraphQL or Typescript SDK.
 
 ## What's Covered in This Section?
 
@@ -46,7 +46,7 @@ The **Content API** lets you interact with enriched, AI-ready data in Unbody. Bu
                 href={"/content-api/data-types/overview"}
                 arrow={true}>
         <div className={"mx-4 text-xs [&>*]:leading-5 leading-1 opacity-75"}>
-            Understand the custom types supported by the API.
+            List of supported data types
         </div>
     </Cards.Card>
     <Cards.Card title={"Filters"}
@@ -76,6 +76,6 @@ The **Content API** lets you interact with enriched, AI-ready data in Unbody. Bu
 
 1. **Choose Your Interaction Method**:
 - Use the **GraphQL Interface** for precise query operations.
-- Use the **JavaScript SDK** for streamlined integration into web applications.
+- Use the **Typescript SDK** for streamlined integration into web applications.
 2. **Authenticate**: Follow the [authentication guide](/content-api/authentication) to connect to the API.
 3. **Explore Features**: Dive into specific sections to learn about advanced capabilities and examples.
