--- a/pages/content-api/search/hybrid-search.mdx
+++ b/pages/content-api/search/hybrid-search.mdx
@@ -112,7 +112,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
                                               .exec()
         ```
     </Tab>
-    <Tab title={"GraphQl"}>
+    <Tab title={"GraphQL"}>
         ```graphql copy
         query{
           Get{
@@ -143,7 +143,7 @@ Hybrid search can be performed on any text (`string`) field of any object. Here'
 
         ```
     </Tab>
-    <Tab title={"GraphQl"}>
+    <Tab title={"GraphQL"}>
         ```graphql copy
         query {
             Get {
@@ -262,7 +262,7 @@ Have you got your own vector? Great! You can provide it directly to the Hybrid S
                                               .exec();
         ```
     </Tab>
-    <Tab title={"GraphQl"}>
+    <Tab title={"GraphQL"}>
         ```graphql copy
         query {
             Get {
