--- a/pages/content-api/search/semantic-search.mdx
+++ b/pages/content-api/search/semantic-search.mdx
@@ -136,12 +136,12 @@ You can perform semantic searches on virtually any text (`string`) field of any 
 | distance | number | Distance threshold for similarity matching |
 | autocorrect | boolean | Enable automatic correction of search terms |
 
-We can keep the complex type details in the code examples or in a separate type reference section if needed. This makes the table much more readable while still conveying the essential information.
-
+{/*
+this section doesn't add up
 ## Semantic Search: Continued
 In this section we're going to explore more sophisticated functionalities to enhance the search capabilities. Let’s dive in, folks!
 
-We have already explained vector space in the previous doc. **`nearVector`** provides direct access to the vector space, allowing for precise navigation and customized search experiences. Here, we’ll explore advanced techniques and use cases to fully leverage this powerful feature.
+We have already explained vector space in the previous doc. **`nearVector`** provides direct access to the vector space, allowing for precise navigation and customized search experiences. Here, we’ll explore advanced techniques and use cases to fully leverage this powerful feature. */}
 
 ## Advanced Usage
 ### Fine-Tuning with moveTo and moveAwayFrom
